--- a/my-avue/package.json
+++ b/my-avue/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "@smallwei/avue": "^2.6.18",
-    "axios": "^0.20.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "vue": "^2.5.2",
-    "vue-axios": "^3.0.1",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.1"
   },
@@ -37,6 +35,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -44,6 +43,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^10.0.4",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
